# mlops_CI_CD_learning

./: .dockerignore  Dockerfile  Dockerfile.dev  LICENSE  app.py  pyproject.toml  sam-template.yaml
.github/workflows/: ci_cd_workflow.yaml
src/: load_sentiment_model.py  load_sentiment_model_by_boto.py  main.py  sentiment_predictor.py  settings.py
src/scripts/: download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py  settings.py
tests/: test_app.py  test_app_aws.py  test_sentiment_predictor.py
